--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-geopy==1.16.0
-gpxpy==1.3.3
-pillow==5.2.0
-matplotlib==2.2.3
+geopy>=1.16.0
+gpxpy>=1.3.3
+pillow>=5.2.0
+matplotlib>=2.2.3
 mplleaflet==0.0.5
-pandas==0.23.4
-tqdm==4.25.0
+pandas>=0.23.4
+tqdm>=4.25.0
 smopy==0.0.6
